@@ -4,17 +4,12 @@ Vienna To-Do File
 Update this file with a list of things that users have requested but which aren't yet implemented.
 Thanks!
 
-RTM Fixes Needed
-================
-- Get a version of SQLite 3 that works on networked folders.
-
 Known Issues (May not be fixed)
 ===============================
 - Renaming a folder does not update the folder name in smart folders that reference it.
 - The isAccessible(NSString * urlString) function returns NO behind a firewall.
 - Auto-expire needs to run at times other than start up.
-- Vienna now checks that it can create the database and prompts for an alternative
-  location otherwise.
+- Databases cannot be created on remote folders. Vienna will warn and prompt for an alternative location.
 
 Post 2.0 Items
 ==============
